--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
             <i class="fas fa-circle fa-stack-2x text-primary"></i>
-            <i class="fas fa-shopping-cart fa-stack-1x fa-inverse"></i>
+            <i class="fas fa-biking fa-stack-1x fa-inverse"></i>
           </span>
           <h4 class="service-heading">E-Commerce</h4>
           <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
@@ -285,6 +285,7 @@
       </div>
     </div>
   </section>
+ 
   <!-- Team -->
   <section class="bg-light page-section" id="team">
     <div class="container">
@@ -381,7 +382,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-3 col-sm-6">
-          <a href="#">
+          <a href="https://nateej1.github.io/natee-tech-resume/">
             <img class="img-fluid d-block mx-auto" src="img/logos/envato.jpg" alt="">
           </a>
         </div>
