--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
             <a class="nav-link js-scroll-trigger" href="#portfolio">Projects</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#services">Hobbies</a>
+            <a class="nav-link js-scroll-trigger" href="#team">Hobbies</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#team">Team</a>
+            <a class="nav-link js-scroll-trigger" href="#services">Social Media</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
@@ -246,62 +246,22 @@
       </div>
     </div>
   </section>
-
-  
-  <!-- Services -->
-  <section class="page-section" id="services">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">Hobbies</h2>
-          <h3 class="section-subheading text-muted">What I like to do in my "spare" time.</h3>
-        </div>
-      </div>
-      <div class="row text-center">
-        <div class="col-md-4">
-          <span class="fa-stack fa-4x">
-            <i class="fas fa-circle fa-stack-2x text-primary"></i>
-            <i class="fas fa-biking fa-stack-1x fa-inverse"></i>
-          </span>
-          <h4 class="service-heading">Triathlon</h4>
-          <p class="text-muted">Biking is my favorite event! I compete in Sprint and Olympic distance races across the Mid-Atlantic region.</p>
-        </div>
-        <div class="col-md-4">
-          <span class="fa-stack fa-4x">
-            <i class="fas fa-circle fa-stack-2x text-primary"></i>
-            <i class="fas fa-camera fa-stack-1x fa-inverse"></i>
-          </span>
-          <h4 class="service-heading">Photography</h4>
-          <p class="text-muted">Landscapes and the night sky are my favorite settings to capture.</p>
-        </div>
-        <div class="col-md-4">
-          <span class="fa-stack fa-4x">
-            <i class="fas fa-circle fa-stack-2x text-primary"></i>
-            <i class="fas fa-palette fa-stack-1x fa-inverse"></i>
-          </span>
-          <h4 class="service-heading">Crochet</h4>
-          <p class="text-muted">I can get lost in skeins of soft yarn with pretty colors!</p>
-        </div>
-      </div>
-    </div>
-  </section>
- 
-  <!-- Team -->
+ <!-- Team -->
   <section class="bg-light page-section" id="team">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">Our Amazing Team</h2>
-          <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+          <h2 class="section-heading text-uppercase">Hobbies</h2>
+          <h3 class="section-subheading text-muted">Extracurricular Creative Pursuits</h3>
         </div>
       </div>
       <div class="row">
         <div class="col-sm-4">
           <div class="team-member">
             <img class="mx-auto rounded-circle" src="img/team/1.jpg" alt="">
-            <h4>Kay Garland</h4>
-            <p class="text-muted">Lead Designer</p>
-            <ul class="list-inline social-buttons">
+            <h4>Triathlon</h4> <!--Biking is my favorite event! I compete in Sprint and Olympic distance races across the Mid-Atlantic region-->
+            <p class="text-muted">something fun</p>
+            <ul class="list-inline social-buttons"> <!-- could change these buttons to be links to blogs or IG?-->
               <li class="list-inline-item">
                 <a href="#">
                   <i class="fab fa-twitter"></i>
@@ -323,8 +283,8 @@
         <div class="col-sm-4">
           <div class="team-member">
             <img class="mx-auto rounded-circle" src="img/team/2.jpg" alt="">
-            <h4>Larry Parker</h4>
-            <p class="text-muted">Lead Marketer</p>
+            <h4>Photography</h4>
+            <p class="text-muted">Landscapes & Night Sky</p>
             <ul class="list-inline social-buttons">
               <li class="list-inline-item">
                 <a href="#">
@@ -347,8 +307,8 @@
         <div class="col-sm-4">
           <div class="team-member">
             <img class="mx-auto rounded-circle" src="img/team/3.jpg" alt="">
-            <h4>Diana Pertersen</h4>
-            <p class="text-muted">Lead Developer</p>
+            <h4>Crochet</h4>
+            <p class="text-muted">Yarn Queen</p>
             <ul class="list-inline social-buttons">
               <li class="list-inline-item">
                 <a href="#">
@@ -377,7 +337,47 @@
     </div>
   </section>
 
-  <!-- Clients -->
+  
+  <!-- Services -->
+  <section class="page-section" id="services">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12 text-center">
+          <h2 class="section-heading text-uppercase"></h2>
+          <h3 class="section-subheading text-muted">Other ways to engage with me</h3>
+        </div>
+      </div>
+      <div class="row text-center">
+        <div class="col-md-4">
+          <span class="fa-stack fa-4x">
+            <i class="fas fa-circle fa-stack-2x text-primary"></i>
+            <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
+          </span>
+          <h4 class="service-heading"></h4>
+          <p class="text-muted"> Data Science Engagement</p>
+        </div>
+        <div class="col-md-4">
+          <span class="fa-stack fa-4x">
+            <i class="fas fa-circle fa-stack-2x text-primary"></i>
+            <i class="fab fa-github fa-stack-1x fa-inverse"></i>
+          </span>
+          <h4 class="service-heading"></h4>
+          <p class="text-muted">Technical Project Repositories</p>
+        </div>
+        <div class="col-md-4">
+          <span class="fa-stack fa-4x">
+            <i class="fas fa-circle fa-stack-2x text-primary"></i>
+            <i class="fab fa-linkedin-in fa-stack-1x fa-inverse"></i>
+          </span>
+          <h4 class="service-heading"></h4>
+          <p class="text-muted">Professional Community</p>
+        </div>
+      </div>
+    </div>
+  </section>
+ 
+ 
+  <!-- Clients --> <!-- might get rid of this section...figure out how to comment it out-->
   <section class="py-5">
     <div class="container">
       <div class="row">
