--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
   <header class="masthead">
     <div class="container">
       <div class="intro-text">
-        <div class="intro-lead-in">Welcome To Our Studio!</div>
-        <div class="intro-heading text-uppercase">It's Nice To Meet You</div>
-        <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Tell Me More</a>
+        <div class="intro-lead-in">On the shoulders of giants...</div>
+        <div class="intro-heading text-uppercase"> something, maybe? </div>
+        <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="https://nateej1.github.io/natee-tech-resume/">Technical Résumé</a>
       </div>
     </div>
   </header>
@@ -343,8 +343,8 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase"></h2>
-          <h3 class="section-subheading text-muted">Other ways to engage with me</h3>
+          <h2 class="section-heading text-uppercase">Social Media</h2>
+          <h3 class="section-subheading text-muted"></h3>
         </div>
       </div>
       <div class="row text-center">
