--- a/index.html
+++ b/index.html
@@ -349,10 +349,12 @@
       </div>
       <div class="row text-center">
         <div class="col-md-4">
+          <a href="https://nateej1.github.io/natee-tech-resume/">
           <span class="fa-stack fa-4x">
             <i class="fas fa-circle fa-stack-2x text-primary"></i>
             <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
           </span>
+          </a>
           <h4 class="service-heading"></h4>
           <p class="text-muted"> Data Science Engagement</p>
         </div>
