updated all social media icons
to include links and provide handles

--- a/index.html
+++ b/index.html
@@ -350,29 +350,33 @@
       <div class="row text-center">
         <div class="col-md-4">
           <a href="https://nateej1.github.io/natee-tech-resume/">
-          <span class="fa-stack fa-4x">
-            <i class="fas fa-circle fa-stack-2x text-primary"></i>
-            <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
-          </span>
+            <span class="fa-stack fa-4x">
+             <i class="fas fa-circle fa-stack-2x text-primary"></i>
+             <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
+           </span>
           </a>
           <h4 class="service-heading"></h4>
-          <p class="text-muted"> Data Science Engagement</p>
+          <p class="text-muted"> @natee? </p>
         </div>
         <div class="col-md-4">
-          <span class="fa-stack fa-4x">
-            <i class="fas fa-circle fa-stack-2x text-primary"></i>
-            <i class="fab fa-github fa-stack-1x fa-inverse"></i>
-          </span>
+          <a href="https://nateej1.github.io/natee-tech-resume/">
+            <span class="fa-stack fa-4x">
+              <i class="fas fa-circle fa-stack-2x text-primary"></i>
+              <i class="fab fa-github fa-stack-1x fa-inverse"></i>
+            </span>
+          </a>
           <h4 class="service-heading"></h4>
-          <p class="text-muted">Technical Project Repositories</p>
+          <p class="text-muted">nateej1</p>
         </div>
         <div class="col-md-4">
-          <span class="fa-stack fa-4x">
-            <i class="fas fa-circle fa-stack-2x text-primary"></i>
-            <i class="fab fa-linkedin-in fa-stack-1x fa-inverse"></i>
-          </span>
+          <a href="https://nateej1.github.io/natee-tech-resume/">
+            <span class="fa-stack fa-4x">
+              <i class="fas fa-circle fa-stack-2x text-primary"></i>
+              <i class="fab fa-linkedin-in fa-stack-1x fa-inverse"></i>
+            </span>
+          </a>
           <h4 class="service-heading"></h4>
-          <p class="text-muted">Professional Community</p>
+          <p class="text-muted">natee-johnson</p>
         </div>
       </div>
     </div>
